# gomod-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: codeql-analysis.yml  lint-pr.yml  pr.yml  release.yml
src/: combinator.rs  lib.rs  parser.rs
tests/: parse.rs
tests/data/: compress.mod  docker_docs.mod  godebug.mod  ignore.mod  iris.mod  kubernetes.mod  prometheus.mod  tool.mod
