[package]
name = "gomod-parser"
version = "0.4.0"
edition = "2021"
rust-version = "1.65" # MSRV

description = "Simple go.mod parser"
keywords = ["gomod"]
categories = ["encoding"]
repository = "https://github.com/baz-scm/gomod-parser"
readme = "README.md"
license = "Apache-2.0"

authors = ["Baz"]

[package.metadata.release]
allow-branch = ["main", "HEAD"]
push = false
tag = false

[dependencies]
winnow = "0.7"

[dev-dependencies]
indoc = "2.0"
